<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.both.ChangePasswordFragment">

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        style="?android:attr/progressBarStyleHorizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:indeterminate="true"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--        android:id="@+id/snackbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:fitsSystemWindows="true"-->
<!--        app:layout_constraintTop_toBottomOf="@id/progressBar">-->

<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->

    <TextView
        android:id="@+id/change_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/change_password"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:paddingTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/change_password_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="100dp"/>

    <EditText
        android:id="@+id/fieldConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_new_password"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        app:layout_constraintStart_toStartOf="@id/fieldPassword"
        app:layout_constraintEnd_toEndOf="@id/fieldPassword"
        app:layout_constraintTop_toBottomOf="@id/fieldPassword"/>

    <Button
        android:id="@+id/change_password_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_change_password"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/fieldConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/fieldConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
